--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,122 @@
+:root{
+    --bg-primary-body: #fafbfd;
+    --bg-content: #ffffff;
+    --bg-hover:#f4f4f4;
+    --color-txt:#172b4d;
+    --nav-height:70px;
+}
+
+.dark{
+    --bg-primary-body: #151515;
+    --bg-content: #242526;
+    --bg-hover:#dcdcdc;
+    --color-txt:#151f28;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+a{
+    text-decoration: none;
+}
+
+
+
 body{
     font-family: 'Montserrat', sans-serif;
+    position: relative;
+    background-color: var(--bg-primary-body);
+    color: var(--color-txt);
+    padding-top: calc(var(--nav-height) + 30px);
+    font-size: 16px;
 }
+
+.container{
+    max-width: 1600px;
+    margin: auto;
+}
+
+.content{
+    padding: 25px;
+}
+
+/* top nav css  */
+.nav-wrapper{
+    background-color: var(--bg-content);
+    box-shadow: 0 0 30px 0 rgb(82 63 105 / 5%);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 0 30px;
+    z-index: 99;
+}
+
+.nav{
+    height: var(--nav-height);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    color: var(--color-txt);
+    font-size: 2rem;
+    font-weight:900;
+}
+.logo i{
+    color: red;
+}
+
+/* nav css end  */
+
+/* darkmode switch  */
+
+.darkmode-switch{
+    --width:60px;
+    --height:20px;
+    width: var(--width);
+    height: var(--height);
+    background-color: lightslategray;
+    border-radius: 10px;
+    position: relative;
+    cursor: pointer;
+}
+
+.darkmode-switch span{
+    display: inline-grid;
+    place-items: center;
+    height: calc(var(--height) * 2);
+    width: calc(var(--width) * 2);
+    border-radius: 50%;
+    background-color: var(--color-txt);
+    color: var(--bg-content);
+    font-size: 2rem;
+    position: absolute;
+    left: 0;
+    height: calc(-1 * var(--height) / 2);
+    transition: left 0.3s ease-in-out;
+}
+
+.darkmode-swith.dark span{
+    left: calc(var(--width) - var(--height) / 2);
+    background-color: var(--bg-primary-body);
+    columns: var(--color-txt);
+}
+
+.darkmode-switch span .bxs-moon {
+    display: none;
+}
+
+.darkmode-switch.dark span .bxs-moon {
+    display: inline-block;
+}
+
+.darkmode-switch.dark span .bxs-sun {
+    display: none;
+}
+
+/* darkmode switch end  */
