--- a/static/css/app.css
+++ b/static/css/app.css
@@ -29,7 +29,7 @@ a {
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     position: relative;
     background-color: var(--bg-body);
     color: var(--color-txt);
@@ -212,8 +212,6 @@ body {
 /* end country dropdown */
 
 /* count box */
-
-
 .count {
     padding: 5px;
     display: flex;
@@ -234,11 +232,12 @@ body {
 
 .count-info h5 {
     font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .count-info span {
     display: inherit;
-    margin-top: 5px;
+    margin-top: -14px;
     text-transform: uppercase;
     font-weight: 700;
 }
